--- a/index.html
+++ b/index.html
@@ -14,8 +14,23 @@
         </div>
         <div class="city">
             <!--TODO: 1: Create a dropdown with a list of cities -->
+            <select id="cityDropdown">
+              <option value="Vancouver">Vancouver</option>
+              <option value="Edmonton">Edmonton</option>
+              <option value="Winnipeg">Winnipeg</option>
+              <option value="Ottawa">Ottawa</option>
+              <option value="Toronto">Toronto</option>
+            </select>
         </div>
         <!--TODO: 2: Create a placeholder to display current weather -->
+        <div class="current">
+          <div class="item">
+            <div class="city">Vancouver</div>
+            <div class="date">February 18th</div>
+            <div class="temp">20 C</div>
+            <div class="description">Sunny</div>
+          </div>
+        </div>
         <!-- 3: Create a placeholder to display 10 days forecast-->
         <div class="forecast">
             <div class="item" id="item0">
