--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <!--TODO: 2: Create a placeholder to display current weather -->
         <div class="current">
           <div class="item">
-            <div class="city">Vancouver</div>
-            <div class="date">February 18th</div>
-            <div class="temp">20 C</div>
-            <div class="description">Sunny</div>
+            <div class="city"></div>
+            <div class="date"></div>
+            <div class="temp"></div>
+            <div class="description"></div>
           </div>
         </div>
         <!-- 3: Create a placeholder to display 10 days forecast-->
